# ldgr-research

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  adapter-database-contract.json  adapter-resources.json  adapter.toml  install-adapter.sh  loop-prompt.md
.github/workflows/: release.yml
commands/: ldgr-research.md
docs/: research-campaign-process.md  research_ldgr_handoff.md
extensions/: ldgr-research.ts
scripts/: campaign_cleanup.sh  campaign_collect.sh  campaign_create.sh  campaign_launch.sh  campaign_lib.sh  campaign_status.sh
skills/research-project-setup/: SKILL.md  skill.toml
skills/research-project-setup/examples/: setup-summary.md
skills/research-project-setup/fragments/: adapter-setup.md  first-work.md  prompt-artifact.md
skills/research-project-setup/validators/: setup_completeness.md
src/: cli.rs  dashboard.rs  db.rs  graph.rs  guard.rs  hypothesis.rs  main.rs  migrations.rs  policy.rs  reports.rs  schema.rs  tools.rs
templates/: campaign-branch.md  campaign-comparison.md  claim-review.md  experiment-plan.md  milestones.md  negative-result.md  research-spec.md  run-summary.json
tests/: cli_smoke.rs
