[package]
name = "ldgr-research"
version = "0.1.1"
edition = "2021"
description = "LDGR research adapter and local-first research ledger."
license = "Apache-2.0"
repository = "https://github.com/hydra-dynamix/ldgr-research"
homepage = "https://github.com/hydra-dynamix/ldgr-research"
readme = "README.md"

[[bin]]
name = "ldgr-research"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ldgr = { package = "ldgr-core", version = "0.1.1", path = "../ldgr-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.10"

[workspace]
